Project SmartWiFiPassMVP {
  database_type: "PostgreSQL"
  Note: "PDF 축소 MVP. Supabase PostgreSQL + FastAPI + SQLAlchemy/Alembic"
}

Table stores {
  id uuid [pk]
  name varchar(120) [not null]
  timezone varchar(64) [not null, default: "Asia/Seoul"]
  business_day_cutoff varchar(5) [not null, default: "00:00"]
  otp_skip_enabled boolean [not null, default: false]
  policy_config jsonb [not null, default: "{}"]
  policy_version integer [not null, default: 1]
}

Table products {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  name varchar(120) [not null]
  price integer [not null]
  is_active boolean [not null, default: true]

  indexes {
    (store_id, name) [unique]
  }
}

Table orders {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  external_order_id varchar(120) [not null]
  customer_key varchar(160) [not null]
  status varchar(20) [not null, default: "PAID"]
  phone varchar(40)
  phone_lookup_hash varchar(64)
  phone_last4 varchar(4)
  total_amount integer [not null]
  refunded_amount integer [not null, default: 0]
  wifi_minutes integer [not null, default: 0]
  business_date date [not null]
  paid_at timestamptz [not null]
  created_at timestamptz [not null]

  indexes {
    (store_id, external_order_id) [unique]
  }
}

Table order_items {
  id uuid [pk]
  order_id uuid [not null, ref: > orders.id]
  product_id uuid [not null, ref: > products.id]
  name_snapshot varchar(120) [not null]
  quantity integer [not null]
  unit_price integer [not null]
}

Table order_claims {
  id uuid [pk]
  order_id uuid [not null, unique, ref: - orders.id]
  token_hash varchar(64) [not null, unique]
  expires_at timestamptz [not null]
  exchanged_at timestamptz
  created_at timestamptz [not null]
}

Table otp_challenges {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  order_id uuid [not null, ref: > orders.id]
  customer_key varchar(160) [not null]
  phone varchar(40) [not null]
  phone_lookup_hash varchar(64)
  code_hash varchar(128) [not null]
  status varchar(20) [not null, default: "PENDING"]
  attempts integer [not null, default: 0]
  expires_at timestamptz [not null]
  verified_at timestamptz
  created_at timestamptz [not null]
}

Table demo_messages {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  channel varchar(20) [not null, default: "SMS"]
  destination varchar(40) [not null]
  body text [not null]
  payload jsonb [not null, default: "{}"]
  created_at timestamptz [not null]
}

Table wifi_passes {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  customer_key varchar(160) [not null]
  business_date date [not null]
  status varchar(24) [not null, default: "ISSUED"]
  issued_at timestamptz [not null]
  activated_at timestamptz
  expires_at timestamptz [not null]
  version integer [not null, default: 1]
  policy_snapshot jsonb [not null, default: "{}"]
  network_reference varchar(200)

  indexes {
    (store_id, customer_key, business_date) [unique, name: "uq_pass_daily_customer"]
    (status, expires_at) [name: "idx_pass_expiration"]
  }
}

Table daily_spend_balances {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  business_date date [not null]
  customer_key varchar(160) [not null]
  total_amount integer [not null, default: 0]
  version integer [not null, default: 1]

  indexes {
    (store_id, business_date, customer_key) [unique]
  }
}

Table reward_tiers {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  name varchar(80) [not null]
  threshold_amount integer [not null]
  sort_order integer [not null]

  indexes {
    (store_id, threshold_amount) [unique]
  }
}

Table reward_benefits {
  id uuid [pk]
  tier_id uuid [not null, ref: > reward_tiers.id]
  benefit_type varchar(40) [not null]
  title varchar(120) [not null]
  payload jsonb [not null, default: "{}"]
}

Table reward_grants {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  business_date date [not null]
  customer_key varchar(160) [not null]
  tier_id uuid [not null, ref: > reward_tiers.id]
  status varchar(24) [not null, default: "AWAITING_CHOICE"]
  chosen_benefit_id uuid [ref: > reward_benefits.id]
  fulfill_mode varchar(20)
  fulfilled_at timestamptz
  created_at timestamptz [not null]

  indexes {
    (store_id, business_date, customer_key, tier_id) [unique]
  }
}

Table coupons {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  customer_key varchar(160) [not null]
  grant_id uuid [not null, unique, ref: - reward_grants.id]
  status varchar(20) [not null, default: "AVAILABLE"]
  benefit_snapshot jsonb [not null]
  expires_at timestamptz [not null]
  redeemed_at timestamptz
  created_at timestamptz [not null]
}

Table reward_redemptions {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  grant_id uuid [not null, unique, ref: - reward_grants.id]
  benefit_id uuid [not null, ref: > reward_benefits.id]
  customer_key varchar(160) [not null]
  business_date date [not null]
  status varchar(20) [not null, default: "AVAILABLE"]
  order_id uuid [ref: > orders.id]
  benefit_snapshot jsonb [not null]
  created_at timestamptz [not null]
  consumed_at timestamptz
}

Table ai_recommendations {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  type varchar(40) [not null, default: "TIME_SALE"]
  payload jsonb [not null]
  reason text [not null]
  evidence jsonb [not null, default: "{}"]
  confidence float
  status varchar(20) [not null, default: "PENDING"]
  version integer [not null, default: 1]
  created_at timestamptz [not null]
  decided_at timestamptz
}

Table promotions {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  recommendation_id uuid [not null, unique, ref: - ai_recommendations.id]
  title varchar(160) [not null]
  payload jsonb [not null]
  starts_at timestamptz [not null]
  ends_at timestamptz [not null]
  status varchar(20) [not null, default: "SCHEDULED"]
}

Table analytics_hourly {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  bucket_start timestamptz [not null]
  order_count integer [not null, default: 0]
  gross_sales integer [not null, default: 0]
  wifi_active_count integer [not null, default: 0]
  wifi_active_minutes integer [not null, default: 0]
  menu_sales jsonb [not null, default: "{}"]
  repeat_customer_count integer [not null, default: 0]
  generated_at timestamptz [not null]

  indexes {
    (store_id, bucket_start) [unique]
  }
}

Table inventory_items {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  product_id uuid [not null, ref: > products.id]
  quantity integer [not null, default: 0]
  unit varchar(20) [not null, default: "EA"]
  low_stock_threshold integer [not null, default: 0]
  expires_on date
  risk_score integer [not null, default: 0]
  updated_at timestamptz [not null]

  indexes {
    (store_id, product_id) [unique]
  }
}

Table inventory_events {
  id uuid [pk]
  item_id uuid [not null, ref: > inventory_items.id]
  type varchar(24) [not null]
  quantity_delta integer [not null, default: 0]
  reason varchar(240) [not null]
  occurred_at timestamptz [not null]
}

Table admin_users {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  username varchar(120) [not null, unique]
  password_hash varchar(256) [not null]
  role varchar(20) [not null, default: "OWNER"]
}

Table refresh_token_sessions {
  id uuid [pk]
  admin_id uuid [not null, ref: > admin_users.id]
  token_hash varchar(64) [not null, unique]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  replaced_by uuid
  created_at timestamptz [not null]
}

Table idempotency_records {
  id uuid [pk]
  scope varchar(180) [not null]
  key varchar(200) [not null]
  request_hash varchar(64) [not null]
  status_code integer [not null, default: 200]
  response_json jsonb [not null]
  created_at timestamptz [not null]

  indexes {
    (scope, key) [unique]
  }
}

Table audit_logs {
  id uuid [pk]
  store_id uuid [not null, ref: > stores.id]
  actor_type varchar(24) [not null]
  actor_id uuid
  action varchar(80) [not null]
  resource_type varchar(40) [not null]
  resource_id uuid
  metadata jsonb [not null, default: "{}"]
  created_at timestamptz [not null]
}
